components/heptagon/test/good/t9.ept
(* pour debugger
   set arguments -v test/good/t9.ept *)

node f(x,z:int) returns (o1,o2:int)
  let
    switch (x = z)
      | true var o12: int; o22: int;
             do (o12, o22) = (1, 2); o1 = o12; o2 = o22;
      | false do (o2, o1) = (3, 3);
    end
  tel

node main() returns (o1,o2:int)
var x,z:int;
let
  x = 0 fby 1 fby 2 fby x;
  z = 1 fby 2 fby z;
  (o1,o2) = f(x,z);
tel
