components/heptagon/test/bad/t8-causality.ept
(* Must be rejected because of o1 = o1 + 2 equation (causality error) *)

node f(x,z:int) returns (o1,o2:int)
  var o4:int;
  let
    switch (x = z)
      | true do o1 = o1 + 2;o2 = o4+1;o4 = 3
      | false do o1 = 4;o2 = 5;o4 = 5
    end;
  tel

